update booking is active